@@ -10,6 +10,7 @@
 	* src/ReportBase.py: get_person_index -> get_person_mark
 
 2006-06-02  Don Allingham  <don@gramps-project.org>
+	* src/FilterEditor/_ShowResults.py: use list instead of text display
 	* src/FilterEditor/_EditFilter.py: clean up
 	* src/FilterEditor/_EditRule.py: clean up
 	* src/glade/rule.glade: clean up
